# PetGL

./: .gitignore  CMakeLists  CMakeLists.txt  PetCurve.cpp  PetCurve.h  PetGL.cpp  PetGL.h  PetGL.pro  PetGL.ui  PetGLConfig.h  PetGLConfig.h.in  PetMesh.cpp  PetMesh.h  README.md  Viewer.cpp  Viewer.h  common.pri  externallib.pri  main.cpp  packages.pri  plugins.pri
PGL/: CMakeLists.txt  PGL.pro  PetCurve.cpp  PetCurve.h  PetGL.cpp  PetGL.h  PetGL.pro  PetGL.ui  PetMesh.cpp  PetMesh.h  PetMesh.pro  PluginInterface.h  QStreamRedirect.h  Viewer.cpp  Viewer.h  defs.h  main.cpp
cmake/: FindOpenMesh.cmake  FindOpenMesh.cmake~  common.cmake  plugins.cmake
cmake/Module/: FindOpenMesh.cmake
elastic/: CMakeLists.txt  eigen_hamilton.cpp  eigen_hamilton.h  elastic.cpp  elastic.h  elastic.pro  elasticpanel.ui  optimize.cpp  optimize.h  optimize_elastic.cpp  optimize_elastic.h  projection.cpp  projection.h  projection2.cpp  projection2.h  projection2_thread.cpp  projection2_thread.h  projection_thread.cpp  projection_thread.h
meshes/: arc.py
